webUI/theme.css
/* ... */
header {
  color: grey;
  padding: 10px 0;
  text-align: center;
}

input {
  color: white;
  font-family: "Pixelify-Sans";
}

li {
  float: left;
}

li a {
  color: white;
  display: block;
  padding: 14px 16px;
  text-align: center;
  text-decoration: none;
}

select {
  color: white;
  font-family: "Pixelify-Sans";
}

#background-container {
  background-size: cover;
  display: flex;
  flex-wrap: nowrap;
  grid-template-columns: repeat(auto-fill, 100px);
  grid-template-rows: repeat(auto-fill, 100px);
  height: 100%;
  image-rendering: pixelated;
  left: 0;
  overflow: visible;
  pointer-events: none;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 0;
}

#selected-tweaks {
  background: var(--dark-one);
  border-radius: 5px;
  border: 2px solid #111;
  display: none;
  margin: auto;
  overflow-y: auto;
  padding: 5px;
  text-align: center;
  width: 75%;
}

#title {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  height: auto;
  margin-top: 35px;
  position: relative;
  size: cover;
  text-align: center;
  width: 100%;
  z-index: 1;
}

.category {
  margin-bottom: 20px;
  margin-top: 20px;
}

.category-controlled {
  background-color: var(--dark-one);
  border-color: rgb(106, 108, 112);
  border-radius: 0px 0px 5px 5px;
  border-style: solid;
  border-width: 5px;
  display: none;
  max-height: 0;
  overflow: hidden;
  padding-left: 10px;
  padding-right: 10px;
}

.category-label {
  background-color: var(--dark-one);
  border-color: var(--dark-border);
  border-radius: 5px;
  border-style: outset;
  border-style: solid;
  border-width: 5px;
  cursor: pointer;
  font-size: 20px;
  height: 25px;
  margin-bottom: -5px;
  padding: 5px;
  text-align: center;
  transition:
    background-color 0.5s ease-in-out,
    border-color 0.5s ease-in-out;
  user-select: none;
  z-index: 13;
}

.category-label-selectall {
  background-color: var(--dark-one);
  border-color: #00000000;
  border-radius: 2.5px;
  cursor: pointer;
  display: none;
  height: 30px;
  opacity: 0;
  position: absolute;
  right: 30px;
  transform: translateY(-108%);
  width: 30px;
}

.category-label-selectall-hovertext {
  background-color: var(--dark-two);
  border-radius: 5px;
  display: none;
  font-size: 15px;
  transform: translate(-125%, -142%);
  width: max-content;
}

.category-label-selectall-img {
  height: 100%;
  image-rendering: pixelated;
  transform: translateX(-20%);
  width: auto;
}

.category-label-selectall.sub {
  transform: translate(-100%, -108%);
}

.category-label-selectall:active {
  background-color: var(--green-two);
}

.category-label-selectall:hover {
  background-color: var(--dark-border);
}

.category-label-selectall:hover .category-label-selectall-hovertext {
  display: block;
}

.category-label.open {
  border-color: rgb(106, 108, 112);
  border-radius: 5px 5px 0px 0px;
}

.category-label.open:hover {
  border-radius: 5px 5px 0px 0px;
}

.category-label:hover {
  background-color: var(--dark-two);
  border-color: var(--dark-border-hover);
}

.comp-hover-text {
  background: rgb(144, 146, 74);
  border-radius: 3px;
  bottom: 100%;
  display: none;
  font-size: 13px;
  left: 50%;
  padding: 0px;
  position: absolute;
  text-align: center;
  transform: translateX(-50%);
  z-index: 1;
}

.conf-hover-text {
  background: rgb(144, 73, 74);
  border-radius: 3px;
  display: none;
  font-size: 13px;
  left: 50%;
  padding: 7.5px;
  position: absolute;
  text-align: center;
  top: 100%;
  transform: translateX(-50%);
  white-space: no-wrap;
  z-index: 1;
}

.container {
  background: #0000007f;
  border-radius: 10px;
  padding: 20px;
  position: relative;
  z-index: 0;
}

.credits-footer {
  background: var(--dark-one);
  border-color: var(--dark-border);
  border-radius: 12.5px;
  border-style: outset;
  border-width: 7.5px;
  color: white;
  padding: 20px;
  z-index: 5;
}

.desc-error {
  color: #f22;
}

.desc-info {
  color: cyan;
}

.desc-warn {
  color: orange;
}

.download-container {
  background: var(--dark-one);
  border-color: var(--dark-border-ninety);
  border-radius: 10px;
  border-style: solid;
  border-width: 5px;
  height: 150px;
  position: fixed;
  right: 25px;
  top: calc(100vh - 175px);
  width: 300px;
  z-index: 10;
}

.download-selected-button {
  background: var(--dark-one);
  border-color: var(--dark-border);
  border-radius: 5px;
  border-style: outset;
  border-width: 5px;
  color: white;
  cursor: pointer;
  display: block;
  font-family: "Pixelify Sans";
  margin: 10px auto;
  padding: 10px;
  text-align: center;
  transition:
    background 0.5s ease-in-out,
    border-style 0.5s linear;
  width: 80%;
}

.download-selected-button.error {
  background: var(--red-zero);
  border-color: var(--red-two);
  border-style: inset;
  padding: 5px;
}

.download-selected-button.error:hover {
  background: var(--red-zero);
  border-color: var(--red-two);
}

.download-selected-button.http {
  animation: rotateBorderHttp 3.75s linear infinite reverse;
  background: var(--dark-zero);
  border-color: #00000000;
  border-image: linear-gradient(90deg, var(--red-one), var(--dark-two)) round;
  border-radius: 5px;
  border-style: solid;
}

.download-selected-button.http.s {
  animation: rotateBorderHttps 3.75s linear infinite;
  border-image: linear-gradient(90deg, var(--green-one), var(--dark-one)) round;
}

.download-selected-button.http.s:hover {
  background: var(--green-two);
}

.download-selected-button.http:hover {
  background: var(--red-two);
  border-color: #00000000;
}

.download-selected-button:hover {
  background: var(--green-two);
  border-color: var(--green-border-hover);
}

.file-download {
  font-family: "Pixelify Sans";
  text-align: center;
}

.file-download button {
  font-family: "Pixelify Sans";
  font-size: 16px;
  margin: 5px;
  padding: 10px;
}
/* ... */

